--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header nav a.active {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Poppins', sans-serif;
     font-weight: 600; 
-    color: #2D2A2A; 
+    color: #d1b963; 
     line-height: 1.3;
 }
 
@@ -507,3 +507,4 @@ select {
     border-color: #F2AB27; 
     box-shadow: 0 0 0 3px rgba(242, 171, 39, 0.2); 
 }
+
